fixed code horizontal scroll

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ code{
     /*word-wrap: break-word;*/
     background-color:#262839;
     padding: 8px;
+    display:block;
     overflow-y:hidden;
     overflow-x:scroll;
 }
